--- a/style.css
+++ b/style.css
@@ -1,10 +1,67 @@
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica;
+}
+.banner{
+    width: 100%;
+    height: 100vh;
+}
+.content{
+    width: 85%;
+    margin: auto;
+    padding-top: 0;
+}
+.content header{
+    padding-bottom: 10px;
+}
+.content hr{
+    width: 100%;
+    margin: auto;
+    border-top: 1px solid #000;
+}
+.content h3{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 35px 35px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar ul li{
+    font-size: 14px;
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: #000;
+    text-transform: none;
 }
 
-a {
-    color: blue;
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0;
+    background: #000;
+    position: absolute;
+    left: 0;
+    bottom: -7.5px;
+    transition: 0.5s;
+
 }
+.navbar ul li:hover::after{
+    width: 100%;
+
+}
+.navbar header{
+    font-weight: bold;
+}
+
+
